# a5-digital-human

./: .env.example  .gitignore  PROTOTYPE_V2_MIGRATION.md  README.md  admin.html  conf.yaml  dashboard.html  design-spec.md  fix_vrm.py  main.py  mobile-home.html  mobile-prototype.html  pyproject.toml  requirements.txt  sensenova_config.py  ui-design.pen
.claude/: 00-项目规范概览.md  CLAUDE.md
.claude/workflows/: fix-p2.js
a5-admin-design/: a5-admin-design.html
a5-admin-design/assets/: charts.js
admin/: app.py
admin/pages/: knowledge.py  settings.py  stats.py
admin/utils/: dify_admin.py
backend/: config.py  http_client.py
backend/repository/: chat_repo.py  scenic_repo.py
backend/routes/: chat.py  health.py  scenic.py  vrm.py
backend/services/: asr_service.py  chatbot.py  dify_client.py  local_rag.py  sensenova.py  tts_service.py
docs/: api-reference.md  architecture.md  deployment.md  前端架构适配度多Agent评估报告.md  灵山重构路线图-多架构师规划.md
frontend/: admin.html  dashboard.html  index.html
frontend/static/: vrm-debug.html  vrm-test.html
frontend/static/css/: shared-theme.css
knowledge/: dining_guide.md  faq.md  route_map.md  scenic_intro.md  ticket_info.md
prototype-v2/: admin.html  dashboard.html  detail-prototype.html  form-prototype.html  list-prototype.html  mobile-prototype.html  prototype-preview.html
scripts/: download_models.py  setup.sh  test_accuracy.py  verify_lingshan.sh
tests/: conftest.py  test_chat_chain.py  test_dify_rag.py  test_scenic_repo.py  test_sensenova.py  test_sensenova_competition.py  test_sensenova_stream.py  test_tts_asr.py
(+6 files in other folders)
